--- a/_includes/swc/who.html
+++ b/_includes/swc/who.html
@@ -2,8 +2,10 @@
   <strong>Who:</strong>
   The course is aimed at graduate students and other researchers.
   <strong>
-    While you don't need to have any previous knowledge of git, you should feel comfortable with the BASH command-line.  The Unix Shell is traditionally 
+    While you don't need to have any previous knowledge of git, you should feel comfortable with the BASH command-line.  
+  </strong>
+  The Unix Shell is traditionally 
     taught before this workshop. You can <a href="https://www.eventbrite.com/e/the-unix-shell-tickets-110191172764"  target="_blank">
           attend the Unix Shell workshop</a> to learn about the command-line.
-  </strong>
+  
 </p>
