--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,25 +1,24 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>July 24, 2020 <br>
+    <h3>July 31, 2020 <br>
       <small>We'll take breaks as needed</small></h3>
     <table class="table table-striped">
-      <tr> <td>08:00</td>  <td><a href="http://swcarpentry.github.io/shell-novice/" target="_blank">Automating tasks with the Unix shell</a></td> </tr>
+      <tr> <td>08:00</td>  <td><a href="http://swcarpentry.github.io/git-novice/"  target="_blank">Version control with Git</a></td> </tr>
       <tr> <td>09:00</td>  <td>10 min break</td> </tr>
       <tr> <td>10:00</td>  <td>10 min break</td> </tr>
       <tr> <td>11:00</td>  <td>10 min break</td> </tr>
       <tr> <td>12:00</td>  <td>END</td> </tr>
-      <!-- tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/git-novice/"  target="_blank">Version control with Git</a></td> </tr -->
     </table>
   </div>
   <div class="col-md-6">
     <h3>Working with Data Workshop Series<br>
       <small>Friday Mornings, Summer 2020</small></h3>
     <table class="table table-striped">
-      <tr> <td>July 24, 2020</td>  <td>The Unix Shell (this workshop), <br>
+      <tr> <td>July 24, 2020</td>  <td>The Unix Shell, <br>
         <a href="https://www.eventbrite.com/e/the-unix-shell-tickets-110191172764"  target="_blank">
           Register for Workshop</a>, 
         <a href="https://ucrlibrary.github.io/2020-07-24-ucr/"  target="_blank">View the Workshop Repository</a></td> </tr>
-      <tr> <td>July 31, 2020</td>  <td>Version control with Git, <br>
+      <tr> <td>July 31, 2020</td>  <td>Version control with Git, (this workshop)<br>
         <a href="https://www.eventbrite.com/e/version-control-with-git-tickets-110198913918"  target="_blank">
           Register for Workshop</a>, 
         <a href="https://ucrlibrary.github.io/2020-07-31-ucr/"  target="_blank">View the Workshop Repository</a></td> </tr>
