--- a/_includes/swc/syllabus.html
+++ b/_includes/swc/syllabus.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-6">
+<!-- div class="row">
+  <!-- div class="col-md-6">
     <h3 id="syllabus-shell">The Unix Shell</h3>
     <ul>
       <li>Files and Directories</li>
@@ -10,7 +10,7 @@
       <li>Finding Things</li>
       <li><a href="{{site.swc_pages}}/shell-novice/reference">Reference...</a></li>
     </ul>
-  </div>
+  </div -->
   <!-- div class="col-md-6">
     <h3 id="syllabus-python">Programming in Python</h3>
     <ul>
@@ -51,7 +51,7 @@
 </div>
 -->
 
-<!-- div class="row">
+<div class="row">
   <div class="col-md-6">
     <h3 id="syllabus-git">Version Control with Git</h3>
     <ul>
