--- a/_includes/swc/setup.html
+++ b/_includes/swc/setup.html
@@ -118,7 +118,7 @@
   </div>
 </div> {% comment %} End of 'shell' section. {% endcomment %}
 
-<!-- <div id="git"> {% comment %} Start of 'Git' section. GitHub browser compatibility
+<div id="git"> {% comment %} Start of 'Git' section. GitHub browser compatibility
   is given at https://help.github.com/articles/supported-browsers/{% endcomment %}
   <h3>Git</h3>
   <p>
@@ -180,7 +180,7 @@
     </div>
   </div>
 </div> {% comment %} End of 'Git' section. {% endcomment %}
--->
+<!-- > <-->
 
 <div id="editor"> {% comment %} Start of 'editor' section. {% endcomment %}
   <h3>Text Editor</h3>
